styles/main.css
* {
  box-sizing: border-box;
}

html {
  width: 100%;
  height: 100%;
  scroll-behavior: smooth;
}

body {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  background-color: #fefae0;
  margin: 0;
  padding: 0;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  color: black;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
  font-family: "Lato";
}

.header__button_container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  padding: 1rem;
  flex-grow: 1;
  height: inherit;
}

.header__button_list {
  width: 100%;
  color: black;
  font-weight: 300;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.header__button_list-bottom{
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.copyright {
  text-transform: lowercase;
}

.header__button-name {
  font-size: medium;
  font-weight: 600;
  padding-bottom: 2rem;
}

.header__button-bangkok {
  font-size: 3rem;
  font-weight: 500;
}

.header__button-stockholm  {
  font-size: xx-large;
  font-weight: 200;
}

.header__button-stuff {
  font-weight: 300;
  font-style: italic;
  text-transform: lowercase;
  font-size: 3rem;
}

.header__button-connect {
  padding-top: 2rem;
}

.header__button-contact {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 0.5rem;
  font-weight: 400;
}

/* header sticky nav bar */
#header__nav-sticky {
  position: fixed;
  z-index: 1000;
  background-color: white;
  border: 1px solid;
  border-right: 0;
  right: 0;
}

.header__nav-list {
  margin: 0;
  padding: 0.5rem;
  font-size: 1.2rem;
}

.header__nav-item {
  width: 100%;
  font-style: italic;
}

.header__nav-item-icon {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Articles Stockholm */
.article__stockholm {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin-bottom: 1rem;
}

.article__block_container {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
}

.article__block {
  display: flex;
  border: 1px solid black;
  background-color: white;
  max-width: 90%;
}

.article__block:focus {
  border: 1px solid black;
  background-color: black;
  color: white;
}

.article__header {
  padding: 0 1rem;
  background-color: black;
  color: white;
  text-transform: uppercase;
  display: flex;
  align-items: center;
}

.article__header p {
  letter-spacing: 5px;
}

.article__header a {
  color: white;
}

.article__block span {
  padding: 1rem;
  font-size: medium;
}

.reverse {
  flex-direction: row-reverse;
}

.article__block_image_container {
  max-width: 100px;
}

.article__block_image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.article__header-link {
  color: white;
}

.article__button-item {
  padding-left: 0.5rem;
  border: 1px solid;
  border-color: white;
  text-transform: lowercase;
}

.article__button-item.pointer-none {
  border-color: gray;
  color: gray;
  pointer-events: none;
}

/* Article Bangkok */
.article__bangkok {
  width: 100%;
}

.article__gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 100%;
  height: 100%;
}

.gallery__container {
  position: relative;
  width: 100%;
  height: 100%;
}

.gallery__container:hover .gallery__card-image {
  opacity: 0.4;
}

.gallery__container:hover .gallery__card-description {
  opacity: 0.7;
}

.gallery__card-description {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #fefae0;
}

.gallery_card-text {
  color: black;
  border: 3px double;
  padding: 1rem;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  display: grid;
  font-size: medium;
}

.gallery__card-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.gallery__card-wrapper {
  width: 100%;
  height: auto;
  display: block;
  backface-visibility: hidden;
}

/* Footer */
footer {
  background-color: #333;
  color: white;
  text-align: center;
}

/* MEDIA QUERIES 💻 */
/* Desktop (Large Screens) */
@media only screen and (min-width: 1200px) {
  /* Styles for desktop */
}

/* Tablet (General iPad Size) */
@media only screen and (min-width: 768px) and (max-width: 1024px) {
  /* Styles for tablets */
}

/* Mobile (Portrait) */
@media only screen and (max-width: 767px) {
  /* Styles for mobile devices */
}

/* Small Mobile */
@media only screen and (max-width: 480px) {
  /* Styles for small mobile devices */
}

